[gd_scene load_steps=5 format=3 uid="uid://5i55nbsv33i6"]

[ext_resource type="Script" uid="uid://b0aevn1rpkv61" path="res://Scripts/finger_enemy.gd" id="1_8ffdi"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_vjap0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8ffdi"]

[sub_resource type="SphereShape3D" id="SphereShape3D_vjap0"]

[node name="FingerEnemy" type="CharacterBody3D" groups=["enemy"]]
script = ExtResource("1_8ffdi")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_vjap0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_8ffdi")

[node name="DetectionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, 0, 0, 0)
shape = SubResource("SphereShape3D_vjap0")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
